Dodata bash skripta za pokretanje maven install